# mdrcp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  build.rs  lessons_learnt.md  main_nl.txt
src/: lib.rs  main.rs
src/cli/: mod.rs
tests/: edge_cases.rs  integration.rs  self_update.rs
wrk_docs/: 2024.12.31 - CR - Comprehensive Code Review.md  2024.12.31 - PLAN - Code Review Plan.md  2025.10.31 - CR - Coverage Baseline.md  2025.10.31 - CR - Coverage Final.md  2025.10.31 - CR - Coverage Implementation Notes.md  2025.10.31 - CR - Coverage Improvement Plan.md  2025.10.31 - DOC - Deployment Summary Formats.md  2026.01.01 - CC - Initial Coverage Analysis.md  2026.01.01 - CR - Coverage Final.md  2026.01.01 - PLAN - Coverage Improvement.md  2026.01.09 - CC - Initial Coverage Analysis.md  2026.01.09 - CR - Coverage Final.md  2026.01.09 - PLAN - Coverage Improvement.md  2026.06.19 - HLD - autobin-aware bin discovery via cargo metadata.md
wrk_journals/: 2025.10.31 - JRN - deployment-tool-enhancements.md  2026.06.19 - JRN - autobin-aware bin discovery.md
