[package]
name = "mdrcp"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7"
anyhow = "1.0"
owo-colors = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
time = { version = "0.3", features = ["formatting", "macros"] }

[package.metadata.cargo-llvm-cov]
ignore-filename-regex = ["(^|/)src/main\\.rs$", "(^|/)tests/.*"]
